# ez-geo

./: .gitignore  CMakeLists.txt  Preconfig.cmake  README.md
include/ez/geo/: AABB.hpp  AABB2d.hpp  AABB3d.hpp  BPath.hpp  Bezier.hpp  BezierFunctions.hpp  CBezier.hpp  Circle.hpp  Color.hpp  Intersect.hpp  IntersectFunctions.hpp  Line.hpp  Line2d.hpp  Line3d.hpp  MMRect.hpp  MPRect.hpp  Orientation.hpp  Plane.hpp  QBezier.hpp  Ray.hpp  Ray2d.hpp  Ray3d.hpp  Rect.hpp  Sphere.hpp  Transform.hpp  Transform2d.hpp  Transform3d.hpp  TriangleFunctions.hpp  Util.hpp
include/ez/geo/intern/: BezierDerivatives.hpp  BezierFitting.hpp  BezierInterpolation.hpp  BezierLength.hpp  BezierOffsets.hpp  BezierSplit.hpp  BezierTypeChecks.hpp  BezierUtil.hpp  DimTraits.hpp  PointType.hpp
src/: BezierFunctions.cpp  IntersectFunctions.cpp  TriangleFunctions.cpp
test/: CMakeLists.txt
test/basic/: Basic.cpp  CMakeLists.txt
test/bezier/fitting/: fitting.cpp
test/bezier/multi/: CFitting.hpp  COffset.hpp  CTangent.hpp  CThrough.hpp  QOffset.hpp  QSplit.hpp  Test.hpp
test/bezier/offset/: curvature.cpp
tests/: AABB.cpp  CMakeLists.txt  transform.cpp
tests/basic/: Basic.cpp  CMakeLists.txt  main.cpp
tests/benchmark/: CMakeLists.txt  main.cpp
tests/bezier/: CMakeLists.txt  qpath.cpp
tests/bezier/fitting/: main.cpp
tests/bezier/multi/: CSplit.hpp  QTangent.hpp  QThrough.hpp  multi.cpp
tests/bezier/offset/: curvature.cpp  offset.cpp
tests/bezier/qpath/: main.cpp
tests/color/: CMakeLists.txt  main.cpp
tests/core/: AABB.cpp  CMakeLists.txt  all_compile.cpp  main.cpp  transform.cpp  util.hpp
tests/ex/: CMakeLists.txt  main.cpp
tests/interface/: CMakeLists.txt  Core.cpp  Core.hpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
